--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ footer {
 }
 
 .jumbotron {
+    margin: 0;
     padding: 30px;
     background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
     color: white;
@@ -29,4 +30,8 @@ footer {
     padding: 50px;
     border-bottom: 1px ridge;
     min-height: 200px;
+}
+
+.navbar {
+    background-color: #901CAD;
 }
