--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
-h1, h2, h3 {
+/* Added h4 and h5 for Week 3 Code Challenge */
+h1, h2, h3, h4, h5 {
     font-family: "Lobster", cursive;
 }
 
@@ -10,12 +11,15 @@ h2 {
     color: #3046C5
 }
 
+#card-head {
+    color: #3046C5
+}
 header h2 {
     color: #CEC8FF;
 }
 
 footer {
-    background-image: linear-gradient(#CEC8FF, white);
+    background-image: linear-gradient(#42318ad2, white);
     padding: 20px 0;
 }
 
@@ -44,4 +48,16 @@ footer {
 a, a:hover {
     color: inherit;
     text-decoration: none;
+  }
+
+  .carousel-caption {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.carousel {
+    border: solid;
+}
+
+.carousel-inner > .carousel-item > img {
+    height: 100%;
   }
