--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ a, a:hover {
     text-decoration: none;
   }
 
-  .carousel-caption {
+.carousel-caption {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -60,4 +60,11 @@ a, a:hover {
 
 .carousel-inner > .carousel-item > img {
     height: 100%;
-  }
+}
+
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+}
