--- a/css/styles.css
+++ b/css/styles.css
@@ -1,70 +1,39 @@
 body {
-    font-family: "Open Sans", sans-serif;
-}
-
-/* Added h4 and h5 for Week 3 Code Challenge */
-h1, h2, h3, h4, h5 {
-    font-family: "Lobster", cursive;
-}
-
-h2 {
-    color: #3046C5
-}
-
-#card-head {
-    color: #3046C5
-}
-header h2 {
-    color: #CEC8FF;
-}
-
-footer {
+  font-family: "Open Sans", sans-serif h1, h2, h3;
+    font-family-font-family: "Lobster", cursive; }
+  body h2 {
+    color: #3046C5; }
+  body header h2 {
+    color: #CEC8FF; }
+  body .site-footer {
+    background-image: linear-gradient(#CEC8FF, white);
+    padding: 20px 0; }
+  body footer {
     background-image: linear-gradient(#42318ad2, white);
-    padding: 20px 0;
-}
-
-.jumbotron {
+    padding: 20px 0; }
+  body a,
+  body a:hover {
+    color: inherit;
+    text-decoration: none; }
+  body .jumbotron {
     margin: 0;
     padding: 30px;
     background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
-    color: white;
-}
-
-.row-content {
+    color: white; }
+  body .row-content {
     padding: 50px;
     border-bottom: 1px ridge;
-    min-height: 200px;
-}
-
-.navbar {
-    background-color: #901CAD;
-}
-
-.site-footer{
-    background-image: linear-gradient(#CEC8FF, white);
-    padding: 20px 0;
-}
-
-a, a:hover {
-    color: inherit;
-    text-decoration: none;
-  }
-
-.carousel-caption {
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.carousel {
-    border: solid;
-}
-
-.carousel-inner > .carousel-item > img {
-    height: 100%;
-}
-
-#carouselButton {
+    min-height: 200px; }
+  body .navbar {
+    background-color: #901CAD; }
+  body .carousel {
+    border: solid #5637dd; }
+  body .carousel-caption {
+    background-color: rgba(0, 0, 0, 0.5); }
+  body .carousel-inner > .carousel-item > img {
+    height: 100%; }
+  body #carouselButton {
     position: absolute;
     right: 0;
     bottom: 0;
-    z-index: 100;
-}
+    z-index: 100; }
