--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,61 @@
 body {
-  font-family: "Open Sans", sans-serif h1, h2, h3;
-    font-family-font-family: "Lobster", cursive; }
-  body h2 {
-    color: #3046C5; }
-  body header h2 {
-    color: #CEC8FF; }
-  body .site-footer {
-    background-image: linear-gradient(#CEC8FF, white);
-    padding: 20px 0; }
-  body footer {
-    background-image: linear-gradient(#42318ad2, white);
-    padding: 20px 0; }
-  body a,
-  body a:hover {
-    color: inherit;
-    text-decoration: none; }
-  body .jumbotron {
-    margin: 0;
-    padding: 30px;
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
-    color: white; }
-  body .row-content {
-    padding: 50px;
-    border-bottom: 1px ridge;
-    min-height: 200px; }
-  body .navbar {
-    background-color: #901CAD; }
-  body .carousel {
-    border: solid #5637dd; }
-  body .carousel-caption {
-    background-color: rgba(0, 0, 0, 0.5); }
-  body .carousel-inner > .carousel-item > img {
-    height: 100%; }
-  body #carouselButton {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: 100; }
+  font-family: "Open Sans", sans-serif; }
+
+h1, h2, h3 {
+  font-family: "Lobster", cursive; }
+
+h2 {
+  color: #3046C5; }
+
+header h2 {
+  color: #CEC8FF; }
+
+.site-footer {
+  background-image: linear-gradient(#CEC8FF, white);
+  padding: 20px 0; }
+
+footer {
+  background-image: linear-gradient(#42318ad2, white);
+  padding: 20px 0; }
+
+a,
+a:hover {
+  color: inherit;
+  text-decoration: none; }
+
+.jumbotron {
+  margin: 0;
+  padding: 30px;
+  background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+  color: white; }
+
+.row-content {
+  padding: 50px;
+  border-bottom: 1px ridge;
+  min-height: 200px; }
+
+.navbar {
+  background-color: #901CAD; }
+
+.carousel {
+  border: solid #5637dd; }
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5); }
+
+.carousel-inner > .carousel-item > img {
+  height: 100%; }
+
+#carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 100; }
+
+#reserveModal .modal-header {
+  background-color: #17A2B8;
+  color: white; }
+
+#loginModal .modal-header {
+  background-color: #901CAD;
+  color: white; }
