--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,6 @@
 $color-primary: #3046C5;
 $color-secondary: #5637dd;
+$color-teal:#17A2B8;
 $color-pale: #CEC8FF;
 $color-mid: #901CAD;
 $color-dark: #60106b;
@@ -12,9 +13,9 @@ cursive;
 
 body {
 
-    font-family: $body-font h1,
-    h2,
-    h3 {
+    font-family: $body-font;
+}
+    h1, h2, h3 {
         font-family: $header-font;
     }
 
@@ -80,4 +81,17 @@ body {
         bottom: 0;
         z-index: 100;
     }
-}
+
+    #reserveModal {
+        .modal-header {
+            background-color: $color-teal;
+            color:white;
+        }
+    }
+
+    #loginModal {
+        .modal-header {
+            background-color: $color-mid;
+            color: white;
+        }
+    }
